added light and dark mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,35 +1,67 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+:root {
+  --main-color: #f5ba13;
+  --dark-main-color: #d29f12;
+  --primary-color: #fff;
+  --dark-primary-color: #fff;
+  --secondary-color: #333;
+  --dark-secondary-color: #000;
+  --background: #eee;
+  --shadow-color: rgba(0, 0, 0, 0.3);
+  --shadow-dark: rgb(138, 137, 137);
+  --note-shadow: #ccc;
+}
+
+[data-theme="dark"] {
+  --primary-color: #333;
+  --dark-primary-color: #000;
+  --secondary-color: #fff;
+  --dark-secondary-color: #fff;
+  --background: #404040;
+  --shadow-color: rgba(255, 255, 255, 0.1);
+  --shadow-dark: rgba(255, 255, 255, 0.2);
+  --note-shadow: #333;
+}
+
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
 html {
   font-family: "Montserrat", sans-serif;
 }
+
 body {
-  background: #eee;
   padding: 0 16px;
 }
 
+.App {
+  background: var(--background);
+  margin: 0px -16px;
+}
+
 .App hr {
-  border: 1px solid #f5ba13;
+  border: 1px solid var(--main-color);
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: var(--main-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: auto -16px;
   padding: 16px 32px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px 0 var(--shadow-color);
 }
 
 header h1 {
-  color: #fff;
+  color: var(--primary-color);
   font-family: "McLaren", cursive;
   font-weight: 200;
 }
@@ -39,42 +71,41 @@ header h1 {
   border-radius: 5px 0 0 5px;
   margin-top: 5px;
   font-size: 15px;
+  background: var(--background);
+  color: var(--secondary-color);
   border: none;
 }
 
 #searchform button {
-  padding: 5px;
+  padding: 3px;
   margin-top: 5px;
   border-radius: 0 5px 5px 0;
-  background: #ddd;
   font-size: 15px;
-  border: none;
+  border: 1px solid var(--primary-color);
   cursor: pointer;
+  background: var(--main-color);
+  color: var(--primary-color);
+  transform: scale(1.05);
 }
 
-footer {
-  position: absolute;
-  text-align: center;
-  left: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-footer p {
-  color: #a09f9f;
+#searchform button:hover {
+  background: var(--dark-main-color);
+  color: var(--primary-color);
 }
 
 #mainform {
   position: relative;
   width: 50%;
   margin: 30px auto 20px auto;
-  background: #fff;
+  background: var(--background);
+  color: var(--dark-secondary-color);
   padding: 10px;
   border-radius: 7px;
-  box-shadow: 0 1px 5px rgb(138, 137, 137);
+  box-shadow: 0 1px 5px var(--shadow-dark);
   display: flex;
   gap: 20px;
 }
+
 #mainform input:nth-child(1) {
   width: 30%;
   border: none;
@@ -83,7 +114,11 @@ footer p {
   font-size: 1.2em;
   font-family: inherit;
   resize: none;
+  border-radius: 5px;
+  background: transparent;
+  color: var(--dark-secondary-color);
 }
+
 #mainform input:nth-child(2) {
   width: 100%;
   border: none;
@@ -92,47 +127,56 @@ footer p {
   font-size: 1.2em;
   font-family: inherit;
   resize: none;
+  border-radius: 5px;
+  background: transparent;
+  color: var(--dark-secondary-color);
 }
 
 #mainform select {
   border-radius: 5px;
   margin-top: 2px;
-  background: #f5ba13;
-  color: #fff;
+  background: var(--main-color);
+  color: var(--primary-color);
   border: none;
   padding: 3px;
   font-weight: 600;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px var(--shadow-color);
   cursor: pointer;
 }
 
 #mainform button {
   position: relative;
   padding: 0px 10px;
-  background: #f5ba13;
-  color: #fff;
+  background: var(--main-color);
+  color: var(--primary-color);
   border: none;
   border-radius: 5px;
   width: auto;
   height: 40px;
   font-weight: 600;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px var(--shadow-color);
   cursor: pointer;
   outline: none;
 }
 
 #mainform button:hover {
-  background: #93a301;
-  transition: all 0.3s ease;
+  background: var(--dark-main-color);
+  transform: scale(1.05);
 }
+
 #mainform button:active {
   transform: scale(0.95);
 }
 
+.container {
+  padding: 10px 0;
+}
+
 .note {
-  background: #fff;
+  background: var(--primary-color);
+  color: var(--dark-secondary-color);
   border-radius: 7px;
-  box-shadow: 0 2px 5px #ccc;
+  box-shadow: 0 2px 5px var(--note-shadow);
   padding: 10px;
   width: auto;
   margin: 16px;
@@ -141,11 +185,13 @@ footer p {
   margin: 30px auto 20px auto;
   gap: 20px;
 }
+
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
   width: 40%;
 }
+
 .note p {
   font-size: 1.1em;
   margin-bottom: 10px;
@@ -158,20 +204,65 @@ footer p {
   margin-right: 10px;
   padding: 5px 10px;
   border-radius: 5px;
-  font-weight: 600;
-  color: #f5ba13;
   border: none;
+  font-weight: 600;
   cursor: pointer;
   outline: none;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  color: var(--main-color);
+  background: var(--background);
+  box-shadow: 0 1px 3px var(--shadow-color);
 }
 
 .note button:hover {
-  background: #f5ba13;
-  color: #fff;
+  background: var(--main-color);
+  color: var(--primary-color);
   transition: all 0.3s ease;
+  transform: scale(1.05);
 }
 
 .note button:active {
   transform: scale(0.95);
+}
+
+.theme-toggle {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 9999;
+  background-color: var(--main-color);
+  color: var(--dark-secondary-color);
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 600;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+/* Hover and Active Effects */
+.theme-toggle:hover {
+  background: var(--dark-main-color);
+  transform: scale(1.05);
+}
+
+.theme-toggle:active {
+  transform: scale(0.95);
+}
+
+.footer {
+  position: absolute;
+  text-align: center;
+  left: 0;
+  width: 100%;
+  height: 2.5rem;
+  background: var(--background);
+}
+
+.footer p {
+  color: var(--secondary-color);
 }
